swipe to nav on windows does not perform navigation when opacity of ui element is 100%
Categories
(Core :: Panning and Zooming, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox97 | --- | unaffected |
firefox98 | --- | unaffected |
firefox99 | --- | disabled |
firefox100 | --- | disabled |
firefox101 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
I think the problem is here
The 4 value is because we use 0.25 for the pref value widget.swipe.success-threshold on macOS, but on Windows we changed it to 0.5
https://hg.mozilla.org/mozilla-central/rev/74fbc27b186244e9a67e7dfc11d849962f7143e8
Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1753146
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 3•3 years ago
|
||
The severity field is not set for this bug.
:botond, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 4•3 years ago
|
||
This is on the release blocker list for the feature, so let's go with S2.
Updated•3 years ago
|
Assignee | ||
Comment 5•3 years ago
|
||
Depends on D140185
Comment 7•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/417eb4c36b32
https://hg.mozilla.org/mozilla-central/rev/1acc8e04bbfa
Comment 8•3 years ago
|
||
The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Description
•